Fix active nav visibility

--- a/src/sites/_base.scss
+++ b/src/sites/_base.scss
@@ -111,7 +111,7 @@ h2, h3 {
       content: '';
       height: 2px;
       left: 0;
-      // opacity: 0;
+      opacity: 0;
       position: absolute;
       top: 100%;
       transition: opacity $transition-duration-long,
